yaml/0.3.0/ingress/templates/virtualservice.yaml
---
# Source: ingress/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: RELEASE-NAME-vs
spec:
  gateways:
    - RELEASE-NAME-gateway
  hosts:
    []
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: 
            port:
              number: 80
